--- a/style.css
+++ b/style.css
@@ -46,9 +46,20 @@ text-decoration-color: azure;
 }
 
 .me {
-  width: 300px
+  width: 200xp
 }
-
+.container {
+  position: relative;
+}
+.text-block {
+  position: absolute;
+  bottom: 200px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 .footer {
   position: fixed;
