added more info

--- a/style.css
+++ b/style.css
@@ -6,24 +6,28 @@
   flex-basis: 70%;
  }
  .right-column div{
-  margin-left: 10%;
+  margin-right: 20%;
+  margin-top: 2%;
  }
- .left-column h2{
-  margin:auto;
-}
-
+ .text-block {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   text-align:justify;
+   background-color: rgb(233, 223, 223);
+   color: rgb(69, 14, 196);
+   padding-right: 0px;
+ }
 .topnav {
   background-color: rgb(231, 227, 227);
 }
-
 .topnav {
+
     color: #c002a7;
+    margin-right: 5%;
     justify-content: space-between;
     display: flex;
     padding: 10px 100px;
     font-family:Georgia, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial','sans-serif';
     font-style:inherit
-
 }
 .topnav a {
   float: left;
@@ -38,45 +42,29 @@
   background-color: rgb(66, 13, 165);
   color: rgb(235, 234, 234);
 }
-
-.topnav a.active {
-  color: #3d0dad;
-  background-color: #970773;
-  color: white;
-}
-
-.text-block {
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  top: 10px;
-  right: 10px;
-  background-color: rgb(233, 223, 223);
-  color: rgb(69, 14, 196);
-  padding-left: 10px;
-  padding-right: 0px;
-}
 #coffee image{
-  display: flex
+  display: flex;
   margin: 0;
 }
 #coffee img{
   max-width:10000px;
   border: 5px solid #b4c5e4;
-  margin: 5px
+  margin: 30px
 }
 
 #sub-image-div2 img{
-  max-width: 200px;
-  border: 5px solid #b4c5e4;
-  margin: 5px
+  max-width: 250px;
+  border: 5px solid #9e0865;
+  margin-block: 10px;
 }
 #sub-image-div2{
   display: 500px;
-  margin: 0;
+  margin-block
 }
 
-#footer{
+#footer {
+  margin-top: 5%;
   color: #c002a7;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
